[package]
authors = ["anderejd <rajder@gmail.com>"]
description = "Calculates checksums for file trees, on all your cores."
keywords = ["checksum", "recursive"]
categories = ["command-line-utilities"]
license = "Apache-2.0/MIT"
name = "treesum"
readme = "README.md"
repository = "https://github.com/anderejd/treesum"
version = "0.1.2"

[dependencies]
sha1 = "0.6.0"
walkdir = "2.2.9"
env_logger = "0.6.2"
log = "0.4.8"
parallel-iterator = "0.1.5"

